--- a/musicforum_back/后端设计文档.md
+++ b/musicforum_back/后端设计文档.md
@@ -3,3 +3,7 @@
 ### 4.22
 - 搭建users和friends表的对应bean
 - 搭建users表相关的基本服务，包括：注册，登录，查看基本信息，修改基本信息
+### 4.23
+- 搭建七牛云文件服务器用于存储图片音频
+- 完成user的头像默认值和上传头像到图片服务器功能
+- 搭建friends表相关的基本服务，包括：添加关注，获取我关注的用户信息，获取关注我的用户信息
