刘梓池 添加音频表，收藏表，点赞表对应的bean（数据库对应）类

--- a/musicforum_back/后端设计文档.md
+++ b/musicforum_back/后端设计文档.md
@@ -7,3 +7,5 @@
 - 搭建七牛云文件服务器用于存储图片音频
 - 完成user的头像默认值和上传头像到图片服务器功能
 - 搭建friends表相关的基本服务，包括：添加关注，获取我关注的用户信息，获取关注我的用户信息
+### 4.24
+- 添加音频表，收藏表，点赞表对应的bean（数据库对应）类
