--- a/musicforum_back/后端设计文档.md
+++ b/musicforum_back/后端设计文档.md
@@ -9,3 +9,6 @@
 - 搭建friends表相关的基本服务，包括：添加关注，获取我关注的用户信息，获取关注我的用户信息
 ### 4.24
 - 添加音频表，收藏表，点赞表对应的bean（数据库对应）类
+### 4.27
+- 添加博客表，及其对应的后端数据库接口类
+- 开始研究音频合成
