刘梓池完成音乐相关一部分服务--对应前端王奥迪

--- a/musicforum_back/后端设计文档.md
+++ b/musicforum_back/后端设计文档.md
@@ -15,3 +15,9 @@
 ### 5.3
 - 上传前后端对应说明文档
 - 将zrz的ffmpeg处理音频的工具类整合进后端代码
+### 5.4
+- 上传数据库3.0包括评论表
+- 评论表的后端对应接口
+- 开始处理音乐相关服务
+### 5.5
+- **完成音乐服务：获得详情，点赞收藏，评论相关服务**
